--- a/public/css/index2.css
+++ b/public/css/index2.css
@@ -90,312 +90,6 @@ h6 {
   font-size: inherit;
 }
 
-.datepicker {
-  width: -webkit-min-content;
-  width: min-content;
-}
-
-.datepicker:not(.active) {
-  display: none;
-}
-
-.datepicker-dropdown {
-  padding-top: 4px;
-  position: absolute;
-  z-index: 20;
-}
-
-.datepicker-dropdown.datepicker-orient-top {
-  padding-bottom: 4px;
-  padding-top: 0;
-}
-
-.datepicker-picker {
-  background-color: #fff;
-  border-radius: 4px;
-  display: flex;
-  flex-direction: column;
-}
-
-.datepicker-dropdown .datepicker-picker {
-  box-shadow: 0 2px 3px hsla(0, 0%, 4%, 0.1), 0 0 0 1px hsla(0, 0%, 4%, 0.1);
-}
-
-.datepicker-main {
-  flex: auto;
-  padding: 2px;
-}
-
-.datepicker-footer {
-  background-color: #f5f5f5;
-  box-shadow: inset 0 1px 1px hsla(0, 0%, 4%, 0.1);
-}
-
-.datepicker-title {
-  background-color: #f5f5f5;
-  box-shadow: inset 0 -1px 1px hsla(0, 0%, 4%, 0.1);
-  font-weight: 700;
-  padding: 0.375rem 0.75rem;
-  text-align: center;
-}
-
-.datepicker-controls {
-  display: flex;
-}
-
-.datepicker-header .datepicker-controls {
-  padding: 2px 2px 0;
-}
-
-.datepicker-controls .button {
-  align-items: center;
-  background-color: #fff;
-  border: 1px solid #dcdcdc;
-  border-radius: 4px;
-  box-shadow: none;
-  color: #363636;
-  cursor: pointer;
-  display: inline-flex;
-  font-size: 1rem;
-  height: 2.25em;
-  justify-content: center;
-  line-height: 1.5;
-  margin: 0;
-  padding: calc(0.375em - 1px) 0.75em;
-  position: relative;
-  text-align: center;
-  vertical-align: top;
-  white-space: nowrap;
-}
-
-.datepicker-controls .button:active, .datepicker-controls .button:focus {
-  outline: none;
-}
-
-.datepicker-controls .button:hover {
-  border-color: #b8b8b8;
-  color: #363636;
-}
-
-.datepicker-controls .button:focus {
-  border-color: #3273dc;
-  color: #363636;
-}
-
-.datepicker-controls .button:focus:not(:active) {
-  box-shadow: 0 0 0 0.125em rgba(50, 115, 220, 0.25);
-}
-
-.datepicker-controls .button:active {
-  border-color: #474747;
-  color: #363636;
-}
-
-.datepicker-controls .button[disabled] {
-  cursor: not-allowed;
-}
-
-.datepicker-header .datepicker-controls .button {
-  border-color: transparent;
-  font-weight: 700;
-}
-
-.datepicker-header .datepicker-controls .button:hover {
-  background-color: #f9f9f9;
-}
-
-.datepicker-header .datepicker-controls .button:active {
-  background-color: #f2f2f2;
-}
-
-.datepicker-footer .datepicker-controls .button {
-  border-radius: 2px;
-  flex: auto;
-  font-size: 0.75rem;
-  margin: calc(0.375rem - 1px) 0.375rem;
-}
-
-.datepicker-controls .view-switch {
-  flex: auto;
-}
-
-.datepicker-controls .next-button, .datepicker-controls .prev-button {
-  flex: 0 0 14.2857142857%;
-  padding-left: 0.375rem;
-  padding-right: 0.375rem;
-}
-
-.datepicker-controls .next-button.disabled, .datepicker-controls .prev-button.disabled {
-  visibility: hidden;
-}
-
-.datepicker-grid, .datepicker-view {
-  display: flex;
-}
-
-.datepicker-view {
-  align-items: stretch;
-  width: 15.75rem;
-}
-
-.datepicker-grid {
-  flex: auto;
-  flex-wrap: wrap;
-}
-
-.datepicker .days {
-  display: flex;
-  flex: auto;
-  flex-direction: column;
-}
-
-.datepicker .days-of-week {
-  display: flex;
-}
-
-.datepicker .week-numbers {
-  display: flex;
-  flex: 0 0 9.6774193548%;
-  flex-direction: column;
-}
-
-.datepicker .weeks {
-  align-items: stretch;
-  display: flex;
-  flex: auto;
-  flex-direction: column;
-}
-
-.datepicker span {
-  -webkit-touch-callout: none;
-  align-items: center;
-  border-radius: 4px;
-  cursor: default;
-  display: flex;
-  justify-content: center;
-  -webkit-user-select: none;
-  user-select: none;
-}
-
-.datepicker .dow {
-  font-size: 0.875rem;
-  font-weight: 700;
-  height: 1.5rem;
-}
-
-.datepicker .week {
-  color: #b8b8b8;
-  flex: auto;
-  font-size: 0.75rem;
-}
-
-.datepicker .days .dow, .datepicker-cell {
-  flex-basis: 14.2857142857%;
-}
-
-.datepicker-cell {
-  height: 2.25rem;
-}
-
-.datepicker-cell:not(.day) {
-  flex-basis: 25%;
-  height: 4.5rem;
-}
-
-.datepicker-cell:not(.disabled):hover {
-  background-color: #f9f9f9;
-  cursor: pointer;
-}
-
-.datepicker-cell.focused:not(.selected) {
-  background-color: #e9e9e9;
-}
-
-.datepicker-cell.selected, .datepicker-cell.selected:hover {
-  background-color: #3273dc;
-  color: #fff;
-  font-weight: 600;
-}
-
-.datepicker-cell.disabled {
-  color: #dcdcdc;
-}
-
-.datepicker-cell.next:not(.disabled), .datepicker-cell.prev:not(.disabled) {
-  color: #7a7a7a;
-}
-
-.datepicker-cell.next.selected, .datepicker-cell.prev.selected {
-  color: #e6e6e6;
-}
-
-.datepicker-cell.highlighted:not(.selected):not(.range):not(.today) {
-  background-color: #f5f5f5;
-  border-radius: 0;
-}
-
-.datepicker-cell.highlighted:not(.selected):not(.range):not(.today):not(.disabled):hover {
-  background-color: #efefef;
-}
-
-.datepicker-cell.highlighted:not(.selected):not(.range):not(.today).focused {
-  background-color: #e9e9e9;
-}
-
-.datepicker-cell.today:not(.selected) {
-  background-color: #00d1b2;
-}
-
-.datepicker-cell.today:not(.selected):not(.disabled) {
-  color: #fff;
-}
-
-.datepicker-cell.today.focused:not(.selected) {
-  background-color: #00ccad;
-}
-
-.datepicker-cell.range-end:not(.selected), .datepicker-cell.range-start:not(.selected) {
-  background-color: #3273dc;
-  color: #fff;
-}
-
-.datepicker-cell.range-end.focused:not(.selected), .datepicker-cell.range-start.focused:not(.selected) {
-  background-color: #b3b3b3;
-}
-
-.datepicker-cell.range-start:not(.range-end) {
-  border-radius: 4px 0 0 4px;
-}
-
-.datepicker-cell.range-end:not(.range-start) {
-  border-radius: 0 4px 4px 0;
-}
-
-.datepicker-cell.range {
-  background-color: #E1EEFB;
-  border-radius: 0;
-}
-
-.datepicker-cell.range:not(.disabled):not(.focused):not(.today):hover {
-  background-color: #d7d7d7;
-}
-
-.datepicker-cell.range.disabled {
-  color: #c6c6c6;
-}
-
-.datepicker-cell.range.focused {
-  background-color: #E1EEFB;
-}
-
-.datepicker-input.in-edit {
-  border-color: #276bda;
-}
-
-.datepicker-input.in-edit:active, .datepicker-input.in-edit:focus {
-  box-shadow: 0 0 0.25em 0.25em rgba(39, 107, 218, 0.2);
-}
-
 @font-face {
   src: url(../fonts/Inter-300.woff2) format("woff2");
   font-family: "Inter";
@@ -419,6 +113,7 @@ h6 {
 }
 .header {
   position: fixed;
+  overflow-x: hidden;
   z-index: 100;
   top: 0;
   left: 0;
@@ -1213,8 +908,8 @@ h6 {
   z-index: -1;
   position: absolute;
   top: 0;
-  left: -100vw;
-  width: 200vw;
+  left: -20px;
+  width: 100vw;
   height: 100%;
   background-color: #1061AB;
 }
@@ -2486,11 +2181,12 @@ h6 {
 .form__item {
   position: relative;
   padding-bottom: 20px;
+  display: flex;
+  flex-direction: column;
 }
-.form .label, .form__label {
+.form__label {
   font-size: 14px;
-  margin-bottom: 5px;
-  display: block;
+  margin-bottom: 3px;
 }
 .form__input-wrapper {
   position: relative;
@@ -2511,32 +2207,28 @@ h6 {
 .form__eye-btn.show {
   background-image: url(../images/icon-pass1.svg);
 }
-.form .input, .form__input {
+.form__input {
   padding: 7px 10px;
   font: inherit;
   width: 100%;
   border: 1px solid #2B7BC6;
-  resize: none;
 }
-.form .input--small, .form__input--small {
-  width: 90px;
-}
-.form .input--icon, .form__input--icon {
+.form__input--icon {
   padding-right: 36px;
 }
-.form .input:focus, .form__input:focus {
+.form__input:focus {
   box-shadow: 0 0 20px 3px #E1EEFB;
   border: 1px solid #2B7BC6;
 }
-.form .input[data-valid=false], .form__input[data-valid=false] {
+.form__input[data-valid=false] {
   box-shadow: 0 0 20px 3px rgba(234, 22, 73, 0.2);
   border: 1px solid #EA1649;
 }
-.form .input[data-valid=true], .form__input[data-valid=true] {
+.form__input[data-valid=true] {
   box-shadow: 0 0 20px 3px rgba(59, 185, 184, 0.2);
   border: 1px solid #3BB9B8;
 }
-.form .error-text, .form__error-text {
+.form__error-text {
   font-style: italic;
   font-size: 12px;
   color: #EA1649;
@@ -2558,7 +2250,7 @@ h6 {
   content: "";
   position: absolute;
   left: 0;
-  top: 0;
+  top: 2px;
   width: 15px;
   height: 15px;
   border: 1px solid #2B7BC6;
@@ -2567,7 +2259,7 @@ h6 {
   content: "";
   position: absolute;
   left: 4px;
-  top: 0;
+  top: 2px;
   width: 7px;
   height: 12px;
   border-left: 3px solid #2B7BC6;
@@ -2615,7 +2307,7 @@ h6 {
 }
 .form__buy-btn:disabled, .form__auth-btn:disabled, .form__save-btn:disabled {
   cursor: not-allowed;
-  background-color: #999999;
+  background-color: #E0E6EC;
 }
 .form__buy-btn:disabled:hover, .form__auth-btn:disabled:hover, .form__save-btn:disabled:hover {
   background-color: #E0E6EC;
@@ -2624,166 +2316,6 @@ h6 {
   margin: 30px auto;
 }
 
-.input-date {
-  position: relative;
-  width: 100%;
-}
-.input-date input {
-  padding-right: 40px;
-  cursor: pointer;
-}
-.input-date::after {
-  content: "";
-  position: absolute;
-  top: 5px;
-  right: 10px;
-  background-image: url(../images/calendar.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  width: 20px;
-  height: 20px;
-  pointer-events: none;
-}
-
-.checkbox-radio {
-  display: flex;
-  grid-gap: 5px;
-  gap: 5px;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-}
-.checkbox-radio__button {
-  display: none;
-}
-.checkbox-radio__label {
-  cursor: pointer;
-  position: relative;
-  padding-left: 25px;
-}
-.checkbox-radio__label::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 15px;
-  height: 15px;
-  border-radius: 50%;
-  border: 1px solid #2B7BC6;
-}
-.checkbox-radio__label::after {
-  content: "";
-  position: absolute;
-  left: 3px;
-  top: 3px;
-  width: 9px;
-  height: 9px;
-  border-radius: 50%;
-  background-color: #2B7BC6;
-  transform: scale(0);
-  transition: transform 0.2s ease-in-out;
-}
-.checkbox-radio__button:checked + .checkbox-radio__label::after {
-  transform: scale(1);
-}
-
-.checkbox-spoiler {
-  font-size: 14px;
-  margin-bottom: 10px;
-}
-.checkbox-spoiler__checkbox {
-  display: none;
-}
-.checkbox-spoiler__label {
-  position: relative;
-  padding-left: 25px;
-  cursor: pointer;
-  transition: all 0.3s ease-in-out;
-}
-.checkbox-spoiler__label::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 15px;
-  height: 15px;
-  border: 1px solid #2B7BC6;
-}
-.checkbox-spoiler__label::after {
-  content: "";
-  position: absolute;
-  left: 4px;
-  top: 0;
-  width: 7px;
-  height: 12px;
-  border-left: 3px solid #2B7BC6;
-  border-top: 3px solid #2B7BC6;
-  transform: rotate(222deg) scale(0);
-  transition: transform 0.2s ease-in-out;
-}
-.checkbox-spoiler__label:hover::before {
-  background-color: #E1EEFB;
-}
-.checkbox-spoiler__label.active::after {
-  transform: rotate(222deg) scale(1);
-}
-.checkbox-spoiler__content {
-  padding: 10px 25px;
-}
-
-/*.checkbox-spoiler__checkbox :checked + .checkbox-spoiler__label::after {*/
-/*  transform: rotate(222deg) scale(1);*/
-/*}*/
-
-.checkbox__input {
-  display: none;
-}
-.checkbox__label {
-  position: relative;
-  padding-left: 25px;
-  cursor: pointer;
-  transition: all 0.3s ease-in-out;
-}
-.checkbox__label::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 15px;
-  height: 15px;
-  border: 1px solid #2B7BC6;
-}
-.checkbox__label::after {
-  content: "";
-  position: absolute;
-  left: 4px;
-  top: 0;
-  width: 7px;
-  height: 12px;
-  border-left: 3px solid #2B7BC6;
-  border-top: 3px solid #2B7BC6;
-  transform: rotate(222deg) scale(0);
-  transition: transform 0.2s ease-in-out;
-}
-.checkbox__label:hover::before {
-  background-color: #E1EEFB;
-}
-
-.checkbox__input:checked + .checkbox__label::after {
-  transform: rotate(222deg) scale(1);
-}
-
-@media (min-width: 768px) {
-  .checkbox-radio {
-    align-items: baseline;
-    flex-wrap: wrap;
-    flex-direction: row;
-    grid-gap: 10px 30px;
-    gap: 10px 30px;
-    justify-content: flex-start;
-  }
-}
 .fav {
   margin-top: 20px;
 }
@@ -3287,7 +2819,16 @@ h6 {
     display: none;
   }
 }
+.login {
+  height: 100%;
+}
 .login__form {
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  max-height: 80vh;
+  overflow-y: auto;
   width: 100%;
   background-color: #ffffff;
   padding: 30px 40px;
@@ -3306,12 +2847,10 @@ h6 {
 
 @media (min-width: 768px) {
   .login {
-    padding: 100px 0;
     background-color: #E1EEFB;
   }
   .login__form {
     max-width: 480px;
-    margin: 0 auto;
   }
 }
 .profile {
@@ -3741,265 +3280,6 @@ h6 {
   text-decoration: underline;
 }
 
-.new-order {
-  position: relative;
-  margin-top: 60px;
-  display: grid;
-  grid-gap: 70px;
-  gap: 70px;
-  align-items: start;
-  font-size: 13px;
-}
-.new-order__title {
-  display: flex;
-  align-items: center;
-  font-size: 24px;
-  font-weight: 700;
-  margin-bottom: 20px;
-}
-.new-order__subtitle {
-  font-size: 18px;
-  font-weight: 700;
-  margin-bottom: 10px;
-}
-.new-order__info {
-  align-self: start;
-  background-color: #E1EEFB;
-  padding: 20px;
-}
-.new-order__table-info {
-  width: calc(100% + 10px);
-  margin: 0 -5px 30px -5px;
-  text-align: right;
-}
-.new-order__table-info td {
-  padding: 3px 5px;
-}
-.new-order__table-header {
-  font-weight: 700;
-  text-align: left;
-}
-.new-order__table-link {
-  display: block;
-  font-weight: 400;
-  text-decoration: underline;
-  color: #004C93;
-}
-.new-order__table-link:hover {
-  text-decoration: none;
-}
-.new-order__item {
-  background-color: #E1EEFB;
-  padding: 20px;
-  margin: 0 -20px;
-}
-.new-order__item--available {
-  background-color: transparent;
-}
-.new-order__product {
-  padding: 10px 0;
-  display: grid;
-  align-items: start;
-  grid-template-columns: 80px 1fr;
-  grid-gap: 5px 20px;
-  gap: 5px 20px;
-}
-.new-order__image {
-  grid-row: 1/5;
-}
-.new-order__image img {
-  width: 80px;
-  height: 80px;
-  display: block;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-.new-order__name {
-  display: block;
-  font-weight: 700;
-  text-transform: uppercase;
-  transition: all 0.3s ease-in-out;
-}
-.new-order__name:hover {
-  color: #004C93;
-}
-.new-order__price, .new-order__full-price, .new-order__amount {
-  font-weight: 700;
-}
-.new-order__price span, .new-order__full-price span, .new-order__amount span {
-  font-size: 14px;
-}
-.new-order__result {
-  font-size: 16px;
-  padding: 15px 0;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 50px;
-}
-.new-order__warning-box {
-  padding: 20px;
-  margin: 0 -20px 30px -20px;
-  background-color: #ADE6FF;
-}
-.new-order__warning-box--error {
-  background-color: rgba(234, 22, 73, 0.3);
-}
-.new-order__link {
-  text-decoration: underline;
-  color: #004C93;
-}
-.new-order__link:hover {
-  text-decoration: none;
-}
-.new-order__section {
-  position: absolute;
-  left: 0;
-  top: 0;
-  opacity: 0;
-  transform: translateY(20px);
-  visibility: hidden;
-  transition: transform 0.5s, opacity 0.5s;
-}
-.new-order__section.active {
-  position: relative;
-  opacity: 1;
-  transform: translateY(0);
-  visibility: visible;
-}
-.new-order__step-list {
-  position: relative;
-  padding: 50px 0;
-}
-.new-order__step {
-  margin-bottom: 50px;
-}
-.new-order__step-header {
-  display: flex;
-  align-items: center;
-  grid-gap: 15px;
-  gap: 15px;
-  margin: 0 0 20px -5px;
-}
-.new-order__step-counter {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  background-color: #E1EEFB;
-  font-weight: 700;
-  font-size: 18px;
-  color: #004C93;
-}
-.new-order__step-title {
-  font-weight: 700;
-  color: #004C93;
-  font-size: 18px;
-}
-.new-order__step-title sup {
-  color: #EA1649;
-}
-.new-order__tabs {
-  margin-bottom: 40px;
-  font-weight: 700;
-  color: #004C93;
-}
-.new-order__tab {
-  text-transform: uppercase;
-  font: inherit;
-  background-color: transparent;
-  border: 1px solid transparent;
-  padding: 10px;
-  transition: all 0.3s;
-}
-.new-order__tab:hover, .new-order__tab.active {
-  border-color: #2B7BC6;
-  background-color: #E1EEFB;
-}
-.new-order__map {
-  width: 100%;
-  height: 430px;
-  border: 1px solid #E1EEFB;
-  margin-bottom: 20px;
-}
-.new-order__row {
-  display: flex;
-  grid-gap: 20px;
-  gap: 20px;
-  margin-bottom: 20px;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-}
-.new-order__gap {
-  margin-bottom: 20px;
-}
-.new-order__input-wrapper {
-  display: flex;
-  align-items: center;
-  grid-gap: 10px;
-  gap: 10px;
-}
-.new-order__checkbox-radio {
-  margin: 10px 0 15px;
-}
-.new-order__checkbox {
-  margin-bottom: -2px;
-}
-.new-order__address {
-  margin-bottom: 10px;
-}
-
-@media (min-width: 578px) {
-  .new-order__product {
-    align-items: center;
-    grid-template-columns: 80px 1fr -webkit-max-content -webkit-max-content -webkit-max-content;
-    grid-template-columns: 80px 1fr max-content max-content max-content;
-  }
-  .new-order__image {
-    grid-row: auto;
-  }
-  .new-order__price, .new-order__full-price, .new-order__amount {
-    text-align: center;
-  }
-  .new-order__full-price {
-    text-align: right;
-  }
-}
-@media (min-width: 768px) {
-  .new-order__product {
-    grid-template-columns: 80px 1fr minmax(130px, -webkit-max-content) minmax(100px, -webkit-max-content) minmax(130px, -webkit-max-content);
-    grid-template-columns: 80px 1fr minmax(130px, max-content) minmax(100px, max-content) minmax(130px, max-content);
-  }
-  .new-order__row {
-    align-items: baseline;
-    justify-content: space-between;
-    flex-direction: row;
-    grid-gap: 20px;
-    gap: 20px;
-  }
-  .new-order__row--start {
-    align-items: flex-end;
-    justify-content: flex-start;
-  }
-}
-@media (min-width: 1200px) {
-  .new-order {
-    margin-top: 20px;
-    padding-left: 20px;
-    grid-template-columns: 1fr 350px;
-  }
-  .new-order__info {
-    position: -webkit-sticky;
-    position: sticky;
-    top: 90px;
-  }
-  .new-order__step-list {
-    margin: 0 -20px;
-  }
-}
 html,
 body {
   margin: 0;
@@ -4037,16 +3317,18 @@ body.lock::after {
   display: flex;
   flex-direction: column;
   min-height: 100%;
-  overflow-x: clip;
+  overflow-x: hidden;
 }
 
 .main {
   margin-top: 58px;
   flex: 1 1 100%;
+  background: linear-gradient(to bottom, #1061AB 0px, #1061AB 40px, transparent 40px);
 }
 .main__container {
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
   position: relative;
 }
 @media (min-width: 992px) {
